mesa (7.12~0-1) UNRELEASED; urgency=low

  * New upstream snapshot.
  * Disable patch temporarily (needs a refresh):
    - 11-hurd-ftbfs-again.diff
  * Drop patch, no longer needed since swrastg was renamed to swrast:
    - 14-load-swrastg-before-swrast.diff

 -- Cyril Brulebois <kibi@debian.org>  Fri, 23 Dec 2011 14:13:28 +0100

mesa (7.11.2-1) unstable; urgency=low

  * New upstream release:
    - Fix a few intel bugs.

 -- Cyril Brulebois <kibi@debian.org>  Sun, 11 Dec 2011 15:43:40 +0100

mesa (7.11.1-1) unstable; urgency=low

  [ Sven Joachim ]
  * New upstream release.
  * Move the Nouveau drivers to the libgl1-mesa-dri package
    (Closes: #645239).
  * Install the swrastg driver in the libgl1-mesa-dri-experimental package
    (Closes: #605444).
    - New patch 14-load-swrastg-before-swrast.diff to prefer swrastg over
      swrast.
    - Build-depend on llvm-2.9-dev also on kfreebsd-{amd64,i386}.

 -- Cyril Brulebois <kibi@debian.org>  Sun, 27 Nov 2011 18:54:24 +0100

mesa (7.11-6) unstable; urgency=low

  [ Julien Cristau ]
  * Inline what's left of debian/scripts/choose-configs in debian/rules.
  * Enable texture-float for dri (closes: #635651).
  * Update from upstream's 7.11 branch (commit e7794048)
  * Merge changes from 7.10.3-4, including:
    - Fix comments in libegl1-mesa.symbols to avoid impending FTBFS with the
      upcoming dpkg-dev 1.16.1 (closes: #642690)

  [ Cyril Brulebois ]
  * Document the symlink dance in README.source.

 -- Cyril Brulebois <kibi@debian.org>  Sat, 24 Sep 2011 20:32:55 +0200

mesa (7.11-5) unstable; urgency=low

  * Merge patch from Pino Tiscano (thanks!):
    - Use hurd-any instead of: hurd-i386 (“wildcard archs are free”).
    - Use any-i386 instead of: i386 kfreebsd-i386 hurd-i386.
    - Rewrite a check in debian/rules to follow the same logic.
    - Switch libgbm1-dbg to arch: linux-any. This fixes uninstallability
      on kfreebsd-* by getting rid of this package there.