@@ -87,12 +87,12 @@ else
   endif
 
   ifneq ($(DEB_HOST_ARCH), s390)
-	DRI_DRIVERS += mach64 mga r128 r200 r300 r600 radeon savage tdfx
+	DRI_DRIVERS += r200 radeon
   endif
   ifeq ($(DEB_HOST_ARCH_CPU), i386)
-	DRI_DRIVERS += i810 i915 i965 sis unichrome
+	DRI_DRIVERS += i810 i915 i965
   else ifeq ($(DEB_HOST_ARCH_CPU), amd64)
-	DRI_DRIVERS += i915 i965 sis unichrome
+	DRI_DRIVERS += i915 i965
   endif
 
   # LLVM is required for r300g and recommended for swrastg on x86:
