@@ -5,6 +5,9 @@ mesa (7.12~0-1) UNRELEASED; urgency=low
     - 11-hurd-ftbfs-again.diff
   * Drop patch, no longer needed since swrastg was renamed to swrast:
     - 14-load-swrastg-before-swrast.diff
+  * Update rules file to strop building DRI1 drivers, they went away
+    with the following upstream commit:
+    - dri: Remove all DRI1 drivers (e4344161bd).
 
  -- Cyril Brulebois <kibi@debian.org>  Fri, 23 Dec 2011 14:13:28 +0100
 
